--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
 <footer style="text-align: center; padding: 2rem; background: #f2f2f2;">
-  <p>&copy; {{ now.Year }} YourSiteName. All rights reserved.</p>
+  <p>&copy; {{ now.Year }} caBEAR.com All rights reserved.</p>
 </footer>
 
