--- a/layouts/_default/welcome.html
+++ b/layouts/_default/welcome.html
@@ -1,10 +1,8 @@
 {{ define "main" }}
-<!-- <div style="background: lightblue; padding: 1rem">
-  Main content loaded from _default/welcome.html
-</div> -->
-
+<!-- layouts/_default/welcome.html -->
+<div class="section-wrap">
  {{ .Content }}
 
  {{ partial "swiper/init.html" (dict "data" "home") }}
-
+</div>
 {{ end }}
