--- a/layouts/shortcodes/circleimage.html
+++ b/layouts/shortcodes/circleimage.html
@@ -1,1 +1,1 @@
-<img src="{{ .Get "src" }}" alt="{{ .Get "alt" }}" class="circle-image" />
+<img src="{{ .Get "src" | relURL }}" alt="{{ .Get "alt" }}" class="circle-image" />
