--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -32,6 +32,10 @@
     <!-- layouts/partials/head.html or baseof.html -->
     <link rel="stylesheet" href="{{ "css/section.css" | relURL }}">
     <link rel="stylesheet" href="{{ "css/override.css" | relURL }}">
+
+
+    <link rel="stylesheet" href="{{ "css/system-fonts.css" | relURL }}">
+
   </head>
 
   <body class="{{ .Type }} {{ .Section }} layout-{{ .Layout }}">
