--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -8,6 +8,30 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
+
+
+
+<!-- Favicons -->
+<link rel="icon" href="{{ "favicon.ico" | relURL }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ "favicon.ico" | relURL }}" type="image/x-icon">
+<link rel="apple-touch-icon" href="{{ "images/logo/logo.png" | relURL }}">
+<link rel="icon" type="image/png" href="{{ "images/logo/logo.png" | relURL }}">
+
+<!-- Organization schema (for Google logo in search) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Bear Collision and Service Center",
+  "url": "https://cabear.com",
+  "logo": "{{ "images/logo/logo.png" | absURL }}"
+}
+</script>
+
+
+
+
+
 {{- partial "analytics/google-tag-manager/head.html" . -}}
 {{- partial "head/custom.html" . -}}
 {{- template "_internal/twitter_cards.html" . -}}
